# rules_ocaml

./: WORKSPACE.bazel  flake.nix
dsl/: BUILD.bazel  library.bzl
nix/: flakes.nix  opam.nix
ocaml/: providers.bzl  repositories.bzl
ocaml/_bootstrap/: ocaml.bzl
ocaml/_functions/: utils.bzl
ocaml/_rules/: impl_executable.bzl  impl_module.bzl  impl_ns_library.bzl  impl_ppx_transform.bzl  ocaml_executable.bzl  ocaml_module.bzl  ocaml_ns_resolver.bzl  ocaml_signature.bzl  ocaml_yacc.bzl  options.bzl  ppx_executable.bzl  ppx_module.bzl
ocaml/_rules/utils/: rename.bzl  utils.bzl
ocaml/_templates/: BUILD.ocaml.toolchain
ocaml/_toolchains/: ocaml_toolchains.bzl
