workspace(name = "obazl_rules_ocaml")


load("@bazel_tools//tools/build_defs/repo:git.bzl", "git_repository")
load("@bazel_tools//tools/build_defs/repo:http.bzl", "http_archive")

load("//ocaml:repositories.bzl", "ocaml_dependencies")
ocaml_dependencies()

load("@bazel_skylib//:workspace.bzl", "bazel_skylib_workspace")
bazel_skylib_workspace()

################################################################
## rule documentation
git_repository(
    name = "io_bazel_stardoc",
    remote = "https://github.com/bazelbuild/stardoc.git",
    tag = "0.4.0",
)

load("@io_bazel_stardoc//:setup.bzl", "stardoc_repositories")
stardoc_repositories()

#############
http_archive(
    name = "bazel_pandoc",
    strip_prefix = "bazel-pandoc-0.3",
    url = "https://github.com/ProdriveTechnologies/bazel-pandoc/archive/v0.3.tar.gz",
)

load("@bazel_pandoc//:repositories.bzl", "pandoc_repositories")

pandoc_repositories()
